--- a/filmy/templates/filmy/base.html
+++ b/filmy/templates/filmy/base.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gaflix</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Mocne dobrej templejt</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sed, veritatis corporis earum corrupti molestias esse alias sint provident ipsam reprehenderit, eum quo a numquam ab nostrum aspernatur dolore? Provident!</p>
+    <div class="container">
+        <h1>Mocne dobrej templejt</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sed, veritatis corporis earum corrupti molestias esse alias sint provident ipsam reprehenderit, eum quo a numquam ab nostrum aspernatur dolore? Provident!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde optio tempore adipisci itaque maxime, sit modi saepe repudiandae omnis inventore id sunt voluptatem! Corporis obcaecati dolor cumque molestias maxime?</p>
+    </div>
     
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
