--- a/filmy/templates/filmy/prvni.html
+++ b/filmy/templates/filmy/prvni.html
@@ -1,9 +1,8 @@
 {% extends 'filmy/base.html' %}
 
+{% block 'title'%}{{block.super}} - prvni{%endblock%}
+
 {% block 'content' %}
-
-
-
 <div class="container">
     <h1>Mocne dobrej templejt</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sed, veritatis corporis earum corrupti
